Fixes #1992 ClayCSS `.panel-unstyled .panel-header` should show bottom border in collapsed state

--- a/packages/clay-css/src/scss/variables/_panels.scss
+++ b/packages/clay-css/src/scss/variables/_panels.scss
@@ -38,7 +38,7 @@ $panel-header-link: map-merge((
 	color: inherit,
 	display: block,
 	text-decoration: $panel-header-link-text-decoration,
-	transition: border-color 0.1s ease,
+	transition: border-color 0.1s ease#{','} border-radius 0.5s ease,
 	hover-color: inherit,
 	hover-text-decoration: $panel-header-link-hover-text-decoration,
 	focus-z-index: 1,
@@ -125,6 +125,7 @@ $panel-unstyled: map-merge((
 	header-border-style: solid,
 	header-border-width: 0 0 1px 0,
 	header-margin-bottom: 1rem,
+	header-collapsed-border-color: $gray-500,
 	header-link: $panel-unstyled-header-link,
 	body-margin-bottom: 1rem,
 	body-padding-top: 0,
